--- a/Templates/index.html
+++ b/Templates/index.html
@@ -58,7 +58,7 @@
 <script src="{{ url_for('static', filename = 'js/heatmap.js')}}"></script>
 
 <div id="link">
-  <a href="/heatmap">Click Here To See the Heatmap!</a>
+  <a href="/heatmap">Click Here To See Our Map!</a>
 </div>
 
 </body>
