--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,8 +59,14 @@ html
 }
 
 #link{
-    margin: 10px;
+    margin: 20px;
     text-align: center;
     font-size: 20px;
+}
+
+#bubble{
+    position: center;
+    margin-left: 10%;
+    margin-top: 5px;
 }
 
